<resources>
    <string name="app_name">CC</string>

    <string name="title_activity_userdasboard">userdasboard</string>
    <string name="navigation_drawer_open">Open Navigation Bar</string>
    <string name="navigation_drawer_close">Close Navigation Bar</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_user_dashboard">userDashboard</string>
    <string name="title_activity_student_dashboard">StudentDashboard</string>

    <string name="app_namex">Merchant Dashboard</string>
    <string name="app_name4">Delivery Status</string>
    <string name="app_name1">Inventory</string>
    <string name="app_name2">Order Summary</string>
    <string name="app_name3">My Account</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="view_inv">View Inventory</string>
    <string name="ord_sum">Order Summery</string>
    <string name="my_acc">My Account</string>
    <string name="view_tran">View Transactions</string>
    <string name="upload_image">Upload Image</string>
    <string name="title_dynamicfeature">dashboard</string>
    <string name="name">Name</string>
    <string name="name1">Name :</string>
    <string name="new_password">New Password :</string>
    <string name="e_mail">E-Mail :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="e_mail1">E-mail</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_activity_maps">Map</string>
</resources>
