<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quantum_grey200"
    tools:context=".Account">


    <Button
        android:id="@+id/save"
        android:layout_width="147dp"
        android:layout_height="54dp"
        android:background="@color/quantum_grey500"
        android:fontFamily="sans-serif-black"
        android:text="@string/save_changes"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <Button
        android:id="@+id/delete"
        android:layout_width="147dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:background="@color/quantum_grey500"
        android:fontFamily="sans-serif-black"
        android:text="delete account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toEndOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="373dp"
        android:layout_height="158dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.234" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="111dp"
                android:layout_height="26dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="262dp"
                android:fontFamily="serif"
                android:text="@string/phone"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="111dp"
                android:layout_height="26dp"
                android:fontFamily="serif"
                android:text="@string/name1"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="373dp"
        android:layout_height="300dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.23">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/oldpass"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.175" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.54" />

            <EditText
                android:id="@+id/Confirm"
                android:layout_width="375dp"
                android:layout_height="47dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.909" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="111dp"
                android:layout_height="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="262dp"
                android:fontFamily="serif"
                android:text="@string/new_password"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oldpass"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="140dp"
                android:layout_height="26dp"
                android:fontFamily="serif"
                android:text="@string/confirm_password"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.729" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="111dp"
                android:layout_height="26dp"
                android:fontFamily="serif"
                android:text="Old Password :"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.058" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>